kubernetes/defaults/security/kubewarden/app/policies/trusted-repos-and-tags.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: "trusted-repos-and-tags"
  annotations:
    io.kubewarden.policy.category: "supply-chain-security"
    io.kubewarden.policy.severity: medium
spec:
  policyServer: default
  module: "registry://ghcr.io/kubewarden/policies/trusted-repos:latest"
  mode: monitor # TODO: update after existing workloads fixed
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations: ["CREATE", "UPDATE"]
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["replicationcontrollers"]
      operations: ["CREATE", "UPDATE"]
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      resources: ["deployments", "replicasets", "statefulsets", "daemonsets"]
      operations: ["CREATE", "UPDATE"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      resources: ["jobs", "cronjobs"]
      operations: ["CREATE", "UPDATE"]
  settings:
    registries:
      allow:
        - "docker.io"
        - "gcr.io"
        - "ghcr.io"
        - "oci.external-secrets.io"
        - "quay.io"
        - "registry.${DOMAIN_PRIVATE}"
        - "registry.developers.crunchydata.com"
        - "registry.k8s.io"
    tags:
      reject: ["latest"]
