kubernetes/defaults/security/kubewarden/app/policies/unique-ingress-policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: "unique-ingress-policy"
  annotations:
    io.kubewarden.policy.category: "best-practices"
    io.kubewarden.policy.severity: low
spec:
  policyServer: default
  module: "registry://ghcr.io/kubewarden/policies/unique-ingress-policy:latest"
  mode: monitor
  contextAwareResources:
    - apiVersion: networking.k8s.io/v1
      kind: Ingress
  rules:
    - apiGroups: ["networking.k8s.io"]
      apiVersions: ["v1"]
      resources: ["ingresses"]
      operations:
        - CREATE
        - UPDATE
