kubernetes/defaults/security/kubewarden/app/policies/user-group-psp.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: "user-group-psp"
  annotations:
    io.kubewarden.policy.category: "pod-security-policy"
    io.kubewarden.policy.severity: medium
spec:
  policyServer: default
  module: "registry://ghcr.io/kubewarden/policies/user-group-psp:v0.6.3"
  mode: monitor # TODO: update after existing workloads fixed
  mutating: false # TODO: fixme
  rules:
    - apiGroups: [""]
      apiVersions: [v1]
      resources: [pods]
      operations: [CREATE]
    - apiGroups: [""]
      apiVersions: [v1]
      resources: [replicationcontrollers]
      operations: [CREATE, UPDATE]
    - apiGroups: [apps]
      apiVersions: [v1]
      resources: [deployments, replicasets, statefulsets, daemonsets]
      operations: [CREATE, UPDATE]
    - apiGroups: [batch]
      apiVersions: [v1]
      resources: [jobs, cronjobs]
      operations: [CREATE, UPDATE]
  settings:
    run_as_user:
      MustRunAs: &nonrootAndNobody
        - min: 65532
          max: 65532
        - min: 65534
          max: 65534
      MustRunAsNonRoot: true
    run_as_group:
      MustRunAs: *nonrootAndNobody
    validate_container_image_configuration: false
